# Automation_in_Everyday_Lab_Routine

./: AGENTS.md  Capstone_Ideas.md  Dockerfile  LICENSE  README.md  Readme.md  docker-compose.yaml  setup_submission.py
.gemini/: config.yaml
.github/: copilot-instructions.md
25SS/FynnM_AnnikaP_DavidM_HannahR_ss25_1-1/: flowchemcalculator3000.py
25SS/Grasser_SS25/: .gitignore  README.md  docker-compose.yaml
25SS/Jäger_Jonas_ss25/: README.md
25SS/Ma_Xin_ss_25/: Ma_Xin_M6_calc_yield_py
25SS/banholzer_noah_ss_25/: Banholzer_Noah_M14_dataplotter.py
FynnM_AnnikaP_DavidM_HannahR_ss25/: flowchemcalculator3000.py
FynnM_AnnikaP_DavidM_HannahR_ss25_1-1/: README.md
GitHub_repo/: README.md  setup_submission.py
GitHub_repo/docs/: 00_Start_Here.md  01_Setup_and_Fork.md
Grasser_SS25/: pyproject.toml
Grasser_SS25/automationserver/: virtual_phmeter.py
Grasser_SS25/automationserver/templates/: content-page.jinja  eln_index.jinja
Jäger_Jonas_ss25/: JonasJäger_M9_convert.py
Students_Tasks_Texts/: (Exemplary)_Student_Tasks_updated.csv  (Exemplary)_Student_Tasks_updated.md  Readme.md
Zott_Johannes_ss_25/: README.md  wake_word_listener.py
banholzer_noah_ss_25/: Banholzer_Noah_M6_ReactionYieldCalc.py
code_examples/: README.md  capstone_template.py  poseidon_driver.py
docs/: 01_Setup_and_Fork.md  02_Submission_Guide.md
exemplary_script_chem_data_fetcher/: chemical_data_fetcher.py  readme.md
src/automationserver/: main_server.py
src/automationserver/store/: user_db.sqlite
students_deliverables/25WS/: README.md
supportive_media/: student_setup.sh
(+14 files in other folders)
