[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "automationserver"

[tool.setuptools.package-data]
automationserver = ["*.jinja", "*.sqlite"]

dependencies = [
  "flask",
  "flask-login",
  "flask-socketio",
  "pydantic",
  "numpy",
  "requests"
]
